--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/loderunner/impl/EngineImpl.java=UTF-8
 encoding//src/loderunner/impl/GuardImpl.java=UTF-8
